--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "illuminate/console": "^9.37",
-        "illuminate/filesystem": "^9.37",
-        "illuminate/support": "^9.37",
-        "illuminate/validation": "^9.37",
+        "illuminate/console": "^9.21|^10.0",
+        "illuminate/filesystem": "^9.21|^10.0",
+        "illuminate/support": "^9.21|^10.0",
+        "illuminate/validation": "^9.21|^10.0"
         "protonemedia/laravel-splade": "^1.2.2"
     },
     "conflict": {
