--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "illuminate/console": "^9.21|^10.0",
         "illuminate/filesystem": "^9.21|^10.0",
         "illuminate/support": "^9.21|^10.0",
-        "illuminate/validation": "^9.21|^10.0"
+        "illuminate/validation": "^9.21|^10.0",
         "protonemedia/laravel-splade": "^1.2.2"
     },
     "conflict": {
