--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "illuminate/filesystem": "^10.48.3|^11.0",
         "illuminate/support": "^10.48.3|^11.0",
         "illuminate/validation": "^10.48.3|^11.0",
-        "protonemedia/laravel-splade": "^1.4.18"
+        "protonemedia/laravel-splade": "dev-main"
     },
     "autoload": {
         "psr-4": {
@@ -52,5 +52,11 @@
     "prefer-stable": true,
     "require-dev": {
         "laravel/pint": "^1.1"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/christopherokonkwo/laravel-breeze"
+        }
+    ]
 }
